--- a/static/css/canvas.css
+++ b/static/css/canvas.css
@@ -34,3 +34,11 @@
     width: 100px;
     height: 50px;
 }
+
+#a-canvas a-grab-cursor{
+  cursor : grab;
+}
+
+#a-canvas a-resize-cursor{
+  cursor : e-resize;
+}
