--- a/static/css/editor.css
+++ b/static/css/editor.css
@@ -9,6 +9,7 @@ body {
 }
 
 .container {
+    width: 100%;
     height: 100%;
 }
 
@@ -43,4 +44,5 @@ table.object-list thead {
 
 iframe {
     border: 0;
+    width: 100%;
 }
