should check control bar appear

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
     <header class="main_header">
         <div class="header_wrapper">
         	<div class="logo_sect">
-                <a href="index.html" class="logo"><img src="img/logo.png" alt=""  class="logo_def"><img src="img/retina/logo.png" alt="" class="logo_retina"></a>
+                <a href="index.html" class="logo"><img src="static/img/logo.png" alt=""  class="logo_def"><img src="static/img/retina/logo.png" alt="" class="logo_retina"></a>
                 <div class="slogan">html photo template</div>
             </div>                       
             <div class="header_rp">
@@ -175,7 +175,7 @@
     <div class="container">
         <div id="wrapper" class="row">
             <div class="col-md-2">
-                <div class="sidebar-nav-fixed affix">
+                <div>
                     <div class="well">
                         <ul class="nav">
                             <li class="nav-header">Shape</li>
@@ -216,7 +216,7 @@
             </div>
             <!--/span-->
             <div class="col-md-2">
-                <div class="sidebar-nav-fixed pull-right affix">
+                <div>
                     <div class="well">
                         <table class="nav object-list">
                             <thead>
