--- a/views/index.ejs
+++ b/views/index.ejs
@@ -172,6 +172,9 @@
             <a class="fs_share_close hided" href="javascript:void(0)"></a>
         </div>
     </div>
+    <div id="upload_after" class="fs_gallery_container fade" style="height:100%;display:none;">
+        <iframe id="main_scene" class="main_scene" width="100%" height="100%" allowfullscreen="yes" scrolling="no" allowvr="yes" src="static/html/canvas.html"></iframe>
+    </div>
     <div class="container">
         <div id="wrapper" class="row">
             <div class="col-md-2">
@@ -201,7 +204,7 @@
                 <!--/sidebar-nav-fixed -->
             </div>
             <!--/span-->
-            <div id="main-canvas" class="col-md-8 ">
+            <div id="main-canvas" class="col-md-8">
               <div id="upload_before">
                 <form action="/upload/background" class="dropzone needsclick dz-clickable" id="my" method="post" enctype="multipart/form-data">
                   <input type="file" name="file" id="file" class="dz-hidden-input" style="visibility:hidden;"/>
@@ -210,12 +213,10 @@
                   </div>
                 </form>
               </div>
-              <div id="upload_after" style="height:100%;display:none;">
-                <iframe id="main_scene" class="main_scene" width="100%" height="100%" allowfullscreen="yes" scrolling="no" allowvr="yes" src="static/html/canvas.html"></iframe>
-              </div>
+              
             </div>
             <!--/span-->
-            <div class="col-md-2">
+            <div id="right-toolbar" class="col-md-2">
                 <div>
                     <div class="well">
                         <table class="nav object-list">
@@ -417,7 +418,8 @@
       url: "/upload/background",
       success : function(file, res){
         console.log('backgroudn : ' + res);
-        $("#upload_before").css("display", "none");
+        $("#right-toolbar").addClass("col-md-offset-8")
+        $("#main-canvas").css("display", "none");
         $("#upload_after").css("display", "");
         setBackground(res);
       }
