--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,10 @@
     <script type="text/javascript" src="static/js/bundle.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="static/js/dropzone.js"></script>
+    <script type="text/javascript" src="static/js/jquery.ui.widget.js"></script>
+    <script type="text/javascript" src="static/js/jquery.iframe-transport.js"></script>
+    <script type="text/javascript" src="static/js/jquery.fileupload.js"></script>
+    <script type="text/javascript" src="static/js/jquery.cloudinary.js"></script>
     <link rel="stylesheet" type="text/css" href="static/css/editor.css">
     <link rel="stylesheet" type="text/css" href="static/css/dropzone.css">
 </head>
@@ -51,14 +55,14 @@
                             <li onclick="create('plane')"><a>Plane</a></li>
                             </li>
                             <li class="nav-header">Primitive</li>
-                            <li class="active" data-toggle="modal" data-target="#myModal"><a>Image</a></li>
+                            <li class="active" onclick="create('image')"><a>Image</a></li>
                             <li onclick="create('teleport')"><a>Teleport</a></li>
                             <li onclick="setMiniMap()"><a>minimap</a></li>
                             </li>
                         </ul>
                     </div>
                     <!--/.well -->
-                    <form id="image_form" action="/upload/image" method="post" enctype="multipart/form-data" target="uploader_iframe">
+                    <form id="image_form" name="image_form" action="/upload/image" method="post" enctype="multipart/form-data" target="uploader_iframe">
                     	<input id="image_file" type="file" name="image_file" size="30" />
                     </form>
                     <!-- Hidden iframe which will interact with the server, do not forget to give both name and id values same -->
@@ -183,30 +187,6 @@
         </footer>
     </div>
     <!--/.fluid-container-->
-    <!-- Modal -->
-    <div id="myModal" class="modal fade" role="dialog">
-        <form id="image-form">
-            <input type="submit" style="position: absolute; left: -9999px" />
-            <div class="modal-dialog">
-                <!-- Modal content-->
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Image</h4>
-                    </div>
-                    <div class="modal-body">
-                        <p>URL:
-                            <input id="img-url" type="" name="">
-                        </p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal" onclick="create('image')">OK</button>
-                    </div>
-                </div>
-            </div>
-        </form>
-    </div>
 </body>
 
 </html>
