apply index && editor page

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -8,10 +8,11 @@
             <div class="menu-main-menu-container">
               <ul id="menu-main-menu" class="menu">
                   <li class="menu-item-has-children">
-                      <a href="#"><span>Home</span></a>
+                      <a href="/"><span>Home</span></a>
                   </li>
                     <li class="menu-item-has-children">
                       <a href="#"><span>About us</span></a>
+                      <!--
                         <ul class="sub-menu">
                             <li><a href="gallery_kenburns.html"><span>Kenburns</span></a></li>
                             <li><a href="gallery_flow.html"><span>Flow</span></a></li>
@@ -21,11 +22,11 @@
                             <li><a href="gallery_grid_with_margin.html"><span>Grid 2</span></a></li>
                             <li><a href="gallery_masonry.html"><span>Masonry</span></a></li>
                             <li><a href="gallery_masonry_with_margin.html"><span>Masonry 2</span></a></li>
-                        </ul>
+                        </ul>-->
                     </li>
                     <li class="current-menu-parent menu-item-has-children">
                       <a href="#"><span>Login</span></a>
-                        <ul class="sub-menu">
+                        <!--<ul class="sub-menu">
                           <li class="current-menu-item"><a href="portfolio_grid1.html"><span>Grid Style 1</span></a></li>
                             <li><a href="portfolio_grid2.html"><span>Grid Style 2</span></a></li>
                             <li><a href="portfolio_masonry_listing.html"><span>Masonry Style</span></a></li>
@@ -57,11 +58,11 @@
                                     <li><a href="simple_image_post.html"><span>With Sidebar</span></a></li>
                                 </ul>
                             </li>
-                        </ul>
+                        </ul>-->
                     </li>
                     <li class="menu-item-has-children">
-                      <a href="#"><span>Project</span></a>
-                        <ul class="sub-menu">
+                      <a href="/project"><span>Project</span></a>
+                        <!--<ul class="sub-menu">
                             <li><a href="fullscreen_blog.html"><span>Fullscreen</span></a></li>
                             <li class="menu-item-has-children">
                               <a href="#"><span>Standard</span></a>
@@ -79,15 +80,15 @@
                                     <li><a href="post_with_left_sidebar.html"><span>Left Sidebar</span></a></li>
                                 </ul>
                             </li>
-                        </ul>
+                        </ul>-->
                     </li>
                     <li class="menu-item-has-children">
                       <a href="#"><span>Contact</span></a>
-                        <ul class="sub-menu">
+                        <!--<ul class="sub-menu">
                             <li><a href="contacts_fullscreen.html"><span>Fullscreen</span></a></li>
                             <li><a href="contact_with_sidebar.html"><span>With Sidebar</span></a></li>
                             <li><a href="contact_fullwidth.html"><span>Fullwidth</span></a></li>
-                        </ul>
+                        </ul>-->
                     </li>
                 </ul>
             </div>
