--- a/views/header.ejs
+++ b/views/header.ejs
@@ -25,7 +25,7 @@
                         </ul>-->
                     </li>
                     <li class="current-menu-parent menu-item-has-children">
-                      <a href="#"><span>Login</span></a>
+                      <a href="/login"><span>Login</span></a>
                         <!--<ul class="sub-menu">
                           <li class="current-menu-item"><a href="portfolio_grid1.html"><span>Grid Style 1</span></a></li>
                             <li><a href="portfolio_grid2.html"><span>Grid Style 2</span></a></li>
