add signup page

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,17 +1,17 @@
 <div class="header_wrapper">
   <div class="logo_sect">
         <a href="index.html" class="logo"><img src="../static/img/logo.png" alt=""  class="logo_def"><img src="../static/img/retina/logo.png" alt="" class="logo_retina"></a>
-        <div class="slogan">html photo template</div>
+        <div class="slogan">Make your 360 contents</div>
     </div>
     <div class="header_rp">
         <nav>
             <div class="menu-main-menu-container">
               <ul id="menu-main-menu" class="menu">
                   <li class="menu-item-has-children">
-                      <a href="/"><span>Home</span></a>
+                      <a href="/login"><span>Login</span></a>
                   </li>
                     <li class="menu-item-has-children">
-                      <a href="#"><span>About us</span></a>
+                      <a href="/"><span>Home</span></a>
                       <!--
                         <ul class="sub-menu">
                             <li><a href="gallery_kenburns.html"><span>Kenburns</span></a></li>
@@ -24,8 +24,8 @@
                             <li><a href="gallery_masonry_with_margin.html"><span>Masonry 2</span></a></li>
                         </ul>-->
                     </li>
-                    <li class="current-menu-parent menu-item-has-children">
-                      <a href="/login"><span>Login</span></a>
+                    <li class="menu-item-has-children">
+                      <a href="#"><span>About us</span></a>
                         <!--<ul class="sub-menu">
                           <li class="current-menu-item"><a href="portfolio_grid1.html"><span>Grid Style 1</span></a></li>
                             <li><a href="portfolio_grid2.html"><span>Grid Style 2</span></a></li>
