--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,19 +2,12 @@
 <html class="fullscreen_page sticky_menu">
 <% include head %>
 
-<style>
-    .colored {
-        background-color: rgb(210, 210, 210);
-    }
-</style>
-<!-- Login Options - END -->
-
 </head>
 <body style="background-color:#e9e9e9">
 	<header class="main_header">
     <% include header %>
 	</header>
-	<div class="container" style="margin-top:80px;">
+  <div class="container" style="margin-top:80px;">
 		<div class="container" >
 		 <div class="col-md-4"></div>
 		    <div class="col-md-4">
@@ -22,39 +15,34 @@
 		            <div class="col-md-4">
 		                <div class="panel panel-default">
 		                    <div class="panel-heading">
-		                        <h1 class="panel-title"><strong>Sign In </strong></h1>
+		                        <h1 class="panel-title"><strong>Sign Up </strong></h1>
 		                    </div>
 		                    <div class="panel-body">
-		                        <form id="body" action="/login" method="post">
+		                        <form id="body" action="/signup" method="post" onSubmit="return formValidation();">
 		                            <div class="form-group" style="text-align:left">
 		                                <label for="email">Username or Email</label>
 		                                <input type="email" class="form-control" id="email" name="email" placeholder="Enter email" required="required"/>
 		                            </div>
 		                            <div class="form-group" style="text-align:left">
-		                                <label for="pwd">Password <a href="/sessions/forgot_password">(forgot password)</a></label>
+		                                <label for="pwd">Password</label>
 		                                <input type="password" class="form-control" id="pwd" name="pwd" placeholder="Password" required="required"/>
 		                            </div>
-		                            <button type="submit" class="hasIcon shortcode_button btn_normal btn_type5">Sign in</button>
+                                <div class="form-group" style="text-align:left">
+		                                <label for="pwd">Confirm Password</label>
+		                                <input type="password" class="form-control" id="cpwd" name="cpwd" placeholder="Confirm Password" required="required"/>
+		                            </div>
+		                            <button type="submit" class="hasIcon shortcode_button btn_normal btn_type5">Sign Up</button>
 		                        </form>
 		                    </div>
 		                </div>
 		            </div>
 		        </div>
-						<div class="container" style="margin-top: 20px;">
-            <div class="col-md-4">
-                <div class="login-panel panel panel-default">
-                    <div class="panel-heading" style="background-color:white;">
-                        New to Traverser360? <a href="/signup" style="margin-left:10px;"><b>Create an acount.</b></a>
-                    </div>
-                </div>
-            </div>
-        </div>
 		    </div>
 		    <div class="col-md-4"></div>
 		 </div>
 	</div>
 
-	<div class="content_bg"></div>
+  <div class="content_bg"></div>
 	<script type="text/javascript" src="../static/js/jquery-ui.min.js"></script>
     <script type="text/javascript" src="../static/js/modules.js"></script>
 	<script type="text/javascript" src="../static/js/theme.js"></script>
@@ -90,6 +78,45 @@
 				jQuery('body').removeClass('addPadding');
 			}
 		}
+
+    function formValidation(){
+      var email = document.getElementById('email').value;
+      var pwd = document.getElementById('pwd').value;
+      var cpwd = document.getElementById('cpwd').value;
+
+      if(!email_check(email))
+        return false;
+
+      if(!pwd_check(pwd, cpwd))
+        return false;
+
+      return true;
+    }
+
+    function pwd_check(pwd, cpwd){
+      if(pwd.length == 0 || cpwd.length == 0){
+        alert('Check password please');
+        return false;
+      }
+
+      if(pwd!=cpwd){
+        alert('Check password please');
+        return false;
+      }
+
+      return true;
+    }
+
+    function email_check(email)  {
+      var mailformat = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
+      if(email.match(mailformat)){
+        return true;
+      }else{
+        alert("Check Email please");
+        return false;
+      }
+    }
+
 	</script>
 </body>
 </html>
