--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -62,7 +62,7 @@
                         </ul>
                     </div>
                     <!--/.well -->
-                    <form id="image_form" name="image_form" action="/upload/image" method="post" enctype="multipart/form-data" target="uploader_iframe">
+                    <form id="image_form" name="image_form" action="/project/new/image" method="post" enctype="multipart/form-data" target="uploader_iframe">
                     	<input id="image_file" type="file" name="image_file" size="30" />
                     </form>
                     <!-- Hidden iframe which will interact with the server, do not forget to give both name and id values same -->
@@ -73,7 +73,7 @@
             <!--/span-->
             <div id="main-canvas" class="col-md-8">
               <div id="upload_before">
-                <form action="/upload/background" class="dropzone needsclick dz-clickable" id="my" method="post" enctype="multipart/form-data">
+                <form action="/projcet/new/background" class="dropzone needsclick dz-clickable" id="my" method="post" enctype="multipart/form-data">
                   <input type="file" name="file" id="file" class="dz-hidden-input" style="visibility:hidden;"/>
                   <div class="dz-message needsclick">
                     "Drop files or click to upload"
@@ -204,7 +204,7 @@
   Dropzone.options.my = {
       paramName: "photo", // The name that will be used to transfer the file
       maxFilesize: 1024, // MB
-      url: "/upload/background",
+      url: "/project/new/background",
       success : function(file, res){
         console.log('backgroudn : ' + res);
         $("#upload_before").css("display", "none");
